--- a/serverless.yml
+++ b/serverless.yml
@@ -33,6 +33,22 @@ functions:
       - http:
           path: /userstats
           method: POST
+  userstat-read:
+    handler:  lib/userstat/read.handler
+    package:
+      include: ['lib/userstat/read/**']
+    events:
+      - http:
+          path: /userstats/{id}
+          method: GET
+  userstat-edit:
+    handler:  lib/userstat/edit.handler
+    package:
+      include: ['lib/userstat/edit/**']
+    events:
+      - http:
+          path: /userstats/{id}
+          method: PUT
   swagger:
     handler:  lib/swagger.handler
     package:
