--- a/.env.default
+++ b/.env.default
@@ -1,6 +1,6 @@
 BEARER_TOKEN=abcz-1239
 POSTRES_URL=compare:V35kgfFxX9Fdp@compare-job.cwvyfiiiv5fp.us-west-2.rds.amazonaws.com:5432/compare
 TESTING=true
-DEBUG="*"
+DEBUG="*,-babel,-swagger*,-utils*,-json-schema-ref-parser"
 TLD=grit.ninja
 TAP_RCFILE=.taprc
