--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git@gitlab.grit.work:optizmo/compare/userstats.git"
+    "url": "https://github.com/cooleagle8837/userstat.git"
   },
   "author": "",
   "license": "ISC",
